<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="radio_button_glide_download_text">Glide - Image Loading Library by BumpTech</string>
    <string name="radio_button_udacity_download_text">LoadApp - Current repository by Udacity</string>
    <string name="radio_button_retrofit_download_text">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>
    <string name="downloaded_file_status_key">STATUS</string>
    <string name="downloaded_file_successful">Successful</string>
    <string name="downloaded_file_fail">Fail</string>
    <string name="downloaded_file_name_key">FILE_NAME</string>
    <string name="detail_file_name">File name:</string>
    <string name="detail_status">Status:</string>
    <string name="notification_id_key">NOTIFICATION_ID</string>
    <string name="glide_file_directory">https://github.com/bumptech/glide/archive/master.zip</string>
    <string name="udacity_file_directory">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter/archive/master.zip</string>
    <string name="retrofit_file_download">https://github.com/square/retrofit/archive/master.zip</string>
    <string name="loading_button_initial_text">Download</string>
    <string name="loading_button_clicked_text">Downloading</string>
    <string name="detail_ok_button_text">OK</string>
    <string name="download_title_glide_file">Glide file</string>
    <string name="download_title_loadapp_file">LoadApp file</string>
    <string name="download_title_retrofit_file">Retrofit file</string>
    <string name="notification_button_text">Check Status</string>
    <string name="notification_title_text">Udacity: Android Kotlin Nanodegree</string>
    <string name="notification_context_text">The %s is downloaded</string>
    <string name="file_downloaded_text">File is downloaded!</string>
    <string name="no_file_selected_error_text">Please select a file to download from the options.</string>
    <string name="download_manager_mismatch_id_error">There is nothing in the cursor to query.</string>
    <string name="notification_send_error">Unable to send notification</string>
    <string name="file_path_error">Invalid file option selected.</string>
    <string name="file_name_error">Unable to get file name.</string>
    <string name="download_manager_title_error">Unable to get title name.</string>
    <string name="load_app_channel_id">download_file_channel_id</string>
</resources>
