<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="file"
            type="com.udacity.models.FileDetail" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".DetailActivity"
        tools:showIn="@layout/activity_detail">

        <TextView
            android:id="@+id/file_name_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/detail_file_name"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/file_name_value"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/file_name_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@{file.fileName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/file_name_title"
            app:layout_constraintTop_toTopOf="@+id/file_name_title"
            tools:text="@string/radio_button_retrofit_download_text" />

        <TextView
            android:id="@+id/file_status_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/detail_status"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/file_status_value"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/file_name_value" />

        <TextView
            android:id="@+id/file_status_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textSize="15sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@{file.fileStatus}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/file_status_title"
            app:layout_constraintTop_toTopOf="@+id/file_status_title"
            app:statusColor="@{file.fileStatus}"
            tools:text="@string/downloaded_file_successful" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
